[package]
name = "cicada-window"
version = "0.1.0"
authors = ["Ahraman"]
description = "Crate cicada-window provides support for window creation and management with a unified interface on desktop"

edition.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.56.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_System",
    "Win32_System_LibraryLoader",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
]
